--- a/main.bib
+++ b/main.bib
@@ -1,47 +1,90 @@
 % Encoding: UTF-8 
 @string{apl = {Appl. Phys. Lett.}}
+
 @string{aj = {Astronomical Journal}}
+
 @string{apj = {Astrophysical Journal}}
+
 @string{aap = {Astronomy and Astrophysics}}
+
 @string{arpc = {Annu. Rev. Phys. Chem.}}
+
 @string{assp = {Adv. Solid State Phys.}}
+
 @string{cise = {Computing in Science and Eng.}}
+
 @string{cpl = {Chem. Phys. Lett.}}
+
 @string{epl = {Europhys. Lett.}}
+
 @string{ijqc = {Int. J. Quant. Chem.}}
+
 @string{jap = {J. Appl. Phys.}}
+
 @string{jce = {J. Comput. Electron.}}
+
 @string{jcg = {J. Cryst. Growth}}
+
 @string{jcp = {J. Chem. Phys.}}
+
 @string{jem = {J. Elec. Mat.}}
+
 @string{jltp = {J. of Low Temp. Phys.}}
+
 @string{jp = {J. Physique}}
+
 @string{jpc = {J. Phys. Chem.}}
+
 @string{jpcb = {J. Phys. Chem. B}}
+
 @string{jpcm = {J. Phys.: Condens. Matter}}
+
 @string{jsp = {J. Stat. Phys.}}
+
 @string{mrs = {MRS Bull.}}
+
 @string{nature = {Nature}}
+
 @string{npa = {Nuc. Phys. A}}
+
 @string{pe = {Physica E}}
+
 @string{pla = {Phys. Lett. A}}
+
 @string{plb = {Phys. Lett. B}}
+
 @string{pnas = {Proc. Nat. Acad. Sci.}}
+
 @string{pr = {Phys. Rev}}
+
 @string{pra = {Phys. Rev. A}}
+
 @string{prb = {Phys. Rev. B}}
+
 @string{prc = {Phys. Rev. C}}
+
 @string{prd = {Phys. Rev. D}}
+
 @string{pre = {Phys. Rev. E}}
+
 @string{prl = {Phys. Rev. Lett.}}
+
 @string{pssa = {Phys. Stat. Sol. (a)}}
+
 @string{pssb = {Phys. Stat. Sol. (b)}}
+
 @string{rmp = {Rev. Mod. Phys.}}
+
 @string{science = {Science}}
+
 @string{sm = {Superlattices and Microstructures}}
+
 @string{ssc = {Solid State Comm.}}
+
 @string{sst = {Semicond. Sci. Technol.}}
+
 @Preamble{ " \newcommand{\noop}[1]{} " }
+
 @misc{2017ascl.soft07001W,
   author       = {{Wenger}, Trey V. and {Kepley}, Amanda K. and {Balser}, Dana S.},
   title        = {{HRM: HII Region Models}},
@@ -52,6 +95,7 @@
   adsurl       = {https://ui.adsabs.harvard.edu/abs/2017ascl.soft07001W},
   adsnote      = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 @article{2020SciPy-NMeth,
   author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
              Haberland, Matt and Reddy, Tyler and Cournapeau, David and
@@ -75,6 +119,7 @@
   adsurl  = {https://rdcu.be/b08Wh},
   doi     = {10.1038/s41592-019-0686-2}
 }
+
 @incollection{7288EL,
   booktitle = {CRC Series in Evaluated Data in Atomic Physics},
   editor    = {J. W. Gallagher},
@@ -85,6 +130,7 @@
   year      = {1993},
   notes     = {NIST compilation}
 }
+
 @article{astropy:2013,
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
   adsurl        = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
@@ -103,6 +149,7 @@
   year          = 2013,
   bdsk-url-1    = {https://dx.doi.org/10.1051/0004-6361/201322068}
 }
+
 @article{astropy:2018,
   author        = {{Astropy Collaboration} and {Price-Whelan}, A.~M. and
                    {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and
@@ -163,6 +210,7 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 @article{astropy:2022,
   author        = {{Astropy Collaboration} and {Price-Whelan}, Adrian M. and {Lim}, Pey Lian and {Earl}, Nicholas and {Starkman}, Nathaniel and {Bradley}, Larry and {Shupe}, David L. and {Patil}, Aarya A. and {Corrales}, Lia and {Brasseur}, C.~E. and {N{"o}the}, Maximilian and {Donath}, Axel and {Tollerud}, Erik and {Morris}, Brett M. and {Ginsburg}, Adam and {Vaher}, Eero and {Weaver}, Benjamin A. and {Tocknell}, James and {Jamieson}, William and {van Kerkwijk}, Marten H. and {Robitaille}, Thomas P. and {Merry}, Bruce and {Bachetti}, Matteo and {G{"u}nther}, H. Moritz and {Aldcroft}, Thomas L. and {Alvarado-Montes}, Jaime A. and {Archibald}, Anne M. and {B{'o}di}, Attila and {Bapat}, Shreyas and {Barentsen}, Geert and {Baz{'a}n}, Juanjo and {Biswas}, Manish and {Boquien}, M{'e}d{'e}ric and {Burke}, D.~J. and {Cara}, Daria and {Cara}, Mihai and {Conroy}, Kyle E. and {Conseil}, Simon and {Craig}, Matthew W. and {Cross}, Robert M. and {Cruz}, Kelle L. and {D'Eugenio}, Francesco and {Dencheva}, Nadia and {Devillepoix}, Hadrien A.~R. and {Dietrich}, J{"o}rg P. and {Eigenbrot}, Arthur Davis and {Erben}, Thomas and {Ferreira}, Leonardo and {Foreman-Mackey}, Daniel and {Fox}, Ryan and {Freij}, Nabil and {Garg}, Suyog and {Geda}, Robel and {Glattly}, Lauren and {Gondhalekar}, Yash and {Gordon}, Karl D. and {Grant}, David and {Greenfield}, Perry and {Groener}, Austen M. and {Guest}, Steve and {Gurovich}, Sebastian and {Handberg}, Rasmus and {Hart}, Akeem and {Hatfield-Dodds}, Zac and {Homeier}, Derek and {Hosseinzadeh}, Griffin and {Jenness}, Tim and {Jones}, Craig K. and {Joseph}, Prajwel and {Kalmbach}, J. Bryce and {Karamehmetoglu}, Emir and {Ka{l}uszy{'n}ski}, Miko{l}aj and {Kelley}, Michael S.~P. and {Kern}, Nicholas and {Kerzendorf}, Wolfgang E. and {Koch}, Eric W. and {Kulumani}, Shankar and {Lee}, Antony and {Ly}, Chun and {Ma}, Zhiyuan and {MacBride}, Conor and {Maljaars}, Jakob M. and {Muna}, Demitri and {Murphy}, N.~A. and {Norman}, Henrik and {O'Steen}, Richard and {Oman}, Kyle A. and {Pacifici}, Camilla and {Pascual}, Sergio and {Pascual-Granado}, J. and {Patil}, Rohit R. and {Perren}, Gabriel I. and {Pickering}, Timothy E. and {Rastogi}, Tanuj and {Roulston}, Benjamin R. and {Ryan}, Daniel F. and {Rykoff}, Eli S. and {Sabater}, Jose and {Sakurikar}, Parikshit and {Salgado}, Jes{'u}s and {Sanghi}, Aniket and {Saunders}, Nicholas and {Savchenko}, Volodymyr and {Schwardt}, Ludwig and {Seifert-Eckert}, Michael and {Shih}, Albert Y. and {Jain}, Anany Shrey and {Shukla}, Gyanendra and {Sick}, Jonathan and {Simpson}, Chris and {Singanamalla}, Sudheesh and {Singer}, Leo P. and {Singhal}, Jaladh and {Sinha}, Manodeep and {Sip{H{o}}cz}, Brigitta M. and {Spitler}, Lee R. and {Stansby}, David and {Streicher}, Ole and {{\v{S}}umak}, Jani and {Swinbank}, John D. and {Taranu}, Dan S. and {Tewary}, Nikita and {Tremblay}, Grant R. and {Val-Borro}, Miguel de and {Van Kooten}, Samuel J. and {Vasovi{'c}}, Zlatan and {Verma}, Shresth and {de Miranda Cardoso}, Jos{'e} Vin{'i}cius and {Williams}, Peter K.~G. and {Wilson}, Tom J. and {Winkel}, Benjamin and {Wood-Vasey}, W.~M. and {Xue}, Rui and {Yoachim}, Peter and {Zhang}, Chen and {Zonca}, Andrea and {Astropy Project Contributors}},
   title         = {{The Astropy Project: Sustaining and Growing a Community-oriented Open-source Project and the Latest Major Release (v5.0) of the Core Package}},
@@ -181,6 +229,7 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2022ApJ...935..167A},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 @article{balser2015azimuthal,
   title     = {Azimuthal metallicity structure in the milky way disk},
   author    = {Balser, Dana S and Wenger, Trey V and Anderson, LD and Bania, TM},
@@ -191,6 +240,7 @@
   year      = {2015},
   publisher = {IOP Publishing}
 }
+
 @article{bell_mastcam,
   title     = {The {Mars Science Laboratory} {Curiosity} rover {Mastcam} instruments: Preflight and in-flight calibration, validation, and data archiving},
   author    = {Bell III, James F and Godber, A and McNair, S and Caplinger, MA and Maki, JN and Lemmon, MT and Van Beek, J and Malin, MC and Wellington, D and Kinch, KM and others},
@@ -201,6 +251,7 @@
   year      = {2017},
   publisher = {Wiley Online Library}
 }
+
 @inproceedings{bell_psyche,
   booktitle = {47th Lunar and Planetary Science Conference},
   title     = {The Psyche Multispectral Imager Investigation: Characterizing the Geology, Topography, and Compositional Properties of a Metallic World},
@@ -209,6 +260,7 @@
   keywords  = {Psyche, Metallic World, Future Missions, Multispectral Imager},
   url       = {https://elib.dlr.de/110238/}
 }
+
 @article{bell2016mastcam,
   title   = {MastCam-Z: designing a geologic, stereoscopic, and multispectral pair of zoom cameras for the {NASA} {Mars} 2020 rover},
   author  = {Bell, JF and Maki, JN and Mehall, GL and Ravine, MA and Caplinger, MA and Team, Mastcam-Z},
@@ -217,6 +269,7 @@
   pages   = {4126},
   year    = {2016}
 }
+
 @inproceedings{bell2019tactical,
   title        = {Tactical and Strategic Data Analysis Methods for Multispectral Imaging Data from Landed {Mars} Missions},
   author       = {Bell, James F},
@@ -225,6 +278,7 @@
   year         = {2019},
   organization = {IEEE}
 }
+
 @article{brooks2000unlocking,
   title     = {Unlocking the Keyhole: H2 and PAH emission from molecular clumps in the Keyhole Nebula},
   author    = {Brooks, KJ and Burton, MG and Rathborne, JM and Ashley, MCB and Storey, JWV},
@@ -235,6 +289,18 @@
   year      = {2000},
   publisher = {Blackwell Science Ltd Oxford, UK}
 }
+
+@article{brooks2005simba,
+  title     = {SIMBA observations of the Keyhole Nebula},
+  author    = {Brooks, Kate J and Garay, Guido and Nielbock, Markus and Smith, Nathan and Cox, Pierre},
+  journal   = {The Astrophysical Journal},
+  volume    = {634},
+  number    = {1},
+  pages     = {436},
+  year      = {2005},
+  publisher = {IOP Publishing}
+}
+
 @article{casertano2022determining,
   title   = {Determining the best-fitting slope and its uncertainty for up-the-ramp sampled images with unevenly distributed resultants},
   author  = {Casertano, Stefano},
@@ -242,6 +308,7 @@
   volume  = {394},
   year    = {2022}
 }
+
 @article{chen1994raid,
   title     = {RAID: High-performance, reliable secondary storage},
   author    = {Chen, Peter M and Lee, Edward K and Gibson, Garth A and Katz, Randy H and Patterson, David A},
@@ -252,6 +319,7 @@
   year      = {1994},
   publisher = {ACM New York, NY, USA}
 }
+
 @inproceedings{cillis2018snowballs,
   title        = {Snowballs in Euclid and WFIRST detectors},
   author       = {Cillis, Analia N and Cottingham, David A and Waczynski, Augustyn and Hill, Robert J and Wen, Yiting and Foltz, Roger and Cheng, Edward and Cheung, Stephanie A and Cho, Benjamin and Delo, Gregory S and others},
@@ -261,6 +329,7 @@
   year         = {2018},
   organization = {SPIE}
 }
+
 @misc{click,
   author = {Click},
   title  = {Click: Command-line Interface Library},
@@ -268,16 +337,19 @@
   url    = {https://click.palletsprojects.com/},
   note   = {Accessed 2025-05-21}
 }
+
 @manual{cm4,
   author = {{Raspberry Pi Ltd}},
   title  = {Raspberry Pi Compute Module 4},
   year   = {2023}
 }
+
 @manual{cm4io,
   author = {{Raspberry Pi Ltd}},
   title  = {Raspberry Pi Compute Module 4 IO Board},
   year   = {2023}
 }
+
 @article{COSMIC_2020,
   title   = {COSMIC: Content-based Onboard Summarization to Monitor Infrequent Change},
   author  = {Doran, Gary and Langert, Erik and Lu, Steven and Mandrake, Lukas and Wagstaff, Kiri L. and Young, Jimmie and Braunegg, Anneliese and Horton, Paul and Jeong, Daniel and Trockman, Asher},
@@ -340,6 +412,7 @@
   year      = {2018},
   publisher = {Oxford University Press}
 }
+
 @inproceedings{fairbrother_csbf,
   title     = {2017 {NASA} Balloon Program Update},
   author    = {Fairbrother, Debora A},
@@ -436,6 +509,15 @@
   publisher = {Arizona State University}
 }
 
+@inproceedings{grimes2018pds,
+  title        = {{NASA PDS IMG}: Accessing Your Planetary Image Data},
+  author       = {Grimes, Kevin and Padams, Jordan and Hollins, Galen and Lavoie, Sue and Stanboli, Alice and Wagstaff, Kiri},
+  organization = {Planetary Science Informatics and Data Analytics Conference},
+  year         = {2018}
+}
+
+
+
 @article{gu2018recent,
   title     = {Recent advances in convolutional neural networks},
   author    = {Gu, Jiuxiang and Wang, Zhenhua and Kuen, Jason and Ma, Lianyang and Shahroudy, Amir and Shuai, Bing and Liu, Ting and Wang, Xingxing and Wang, Gang and Cai, Jianfei and others},
@@ -456,8 +538,6 @@
   year      = {2016},
   publisher = {Multidisciplinary Digital Publishing Institute}
 }
-
-
 
 @article{guzik2008development,
   title     = {Development of the high altitude student platform},
@@ -501,22 +581,6 @@
   year      = {2003}
 }
 
-@inproceedings{wagstaff2018deep,
-  title={Deep mars: Cnn classification of mars imagery for the pds imaging atlas},
-  author={Wagstaff, Kiri and Lu, You and Stanboli, Alice and Grimes, Kevin and Gowda, Thamme and Padams, Jordan},
-  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume={32},
-  number={1},
-  year={2018}
-}
-
-@inproceedings{grimes2018pds,
-  title={{NASA PDS IMG}: Accessing Your Planetary Image Data},
-  author = {Grimes, Kevin and Padams, Jordan and Hollins, Galen and Lavoie, Sue and Stanboli, Alice and Wagstaff, Kiri},
-  organization = {Planetary Science Informatics and Data Analytics Conference}, 
-  year = {2018}
-}
-
 @article{heyminck2012great,
   title     = {GREAT: the SOFIA high-frequency heterodyne instrument},
   author    = {Heyminck, Stefan and Graf, UU and G{\"u}sten, R and Stutzki, J{\"u}rgen and H{\"u}bers, Heinz-Wilhelm and Hartogh, P},
@@ -525,6 +589,15 @@
   pages     = {L1},
   year      = {2012},
   publisher = {EDP Sciences}
+}
+
+@inproceedings{horton2020novelty,
+  title     = {Novelty and Discovery Content Analysis Methods for the Planetary Data System Image Atlas},
+  author    = {Horton, Paul and Ravichandar, Sanjna and Lee, Jake and Kerner, Hannah Rae and Natha, Anil and Soliman, Tariq K and Grimes, Kevin and Wagstaff, Kiri and Verma, Rishi and McAuley, James},
+  booktitle = {AGU Fall Meeting Abstracts},
+  volume    = {2020},
+  pages     = {P004--0013},
+  year      = {2020}
 }
 
 @inproceedings{horton2021integrating,
@@ -536,13 +609,24 @@
   organization = {IEEE}
 }
 
-@inproceedings{horton2020novelty,
-  title={Novelty and Discovery Content Analysis Methods for the Planetary Data System Image Atlas},
-  author={Horton, Paul and Ravichandar, Sanjna and Lee, Jake and Kerner, Hannah Rae and Natha, Anil and Soliman, Tariq K and Grimes, Kevin and Wagstaff, Kiri and Verma, Rishi and McAuley, James},
-  booktitle={AGU Fall Meeting Abstracts},
-  volume={2020},
-  pages={P004--0013},
-  year={2020}
+@inproceedings{horton2024anomaly,
+  title        = {Anomaly detection for the Roman Space Telescope wide field instrument’s science data processing pipeline},
+  author       = {Horton, Paul and Memarsadeghi, Nargess and Caraballo-Vega, Jordan A},
+  booktitle    = {Software and Cyberinfrastructure for Astronomy VIII},
+  volume       = {13101},
+  pages        = {1453--1462},
+  year         = {2024},
+  organization = {SPIE}
+}
+
+@inproceedings{horton2024board,
+  title        = {On-board science data quality analysis using anomaly detection for ASTHROS},
+  author       = {Horton, Paul and Thompson, Christian and Groppi, Chris and Seo, Youngmin and Siles, Jose V},
+  booktitle    = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XII},
+  volume       = {13102},
+  pages        = {430--437},
+  year         = {2024},
+  organization = {SPIE}
 }
 
 @inproceedings{horton2024readout,
@@ -582,6 +666,15 @@
   month        = jan,
   adsurl       = {https://ui.adsabs.harvard.edu/abs/2016jdox.rept......},
   adsnote      = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{kaasinen2016cosmos,
+  title     = {The COSMOS [OII] Survey: Evolution of Electron Density with Star Formation Rate},
+  author    = {Kaasinen, Melanie and Bian, Fuyan and Groves, Brent and Kewley, Lisa and Gupta, Anshu},
+  journal   = {Monthly Notices of the Royal Astronomical Society},
+  pages     = {stw2827},
+  year      = {2016},
+  publisher = {Oxford University Press}
 }
 
 @inproceedings{kawamuraterahertz,
@@ -730,11 +823,13 @@
   year         = {2024},
   organization = {SPIE}
 }
+
 @manual{mdrive,
   author = {{intelligent motion systems, inc}},
   title  = {{MDrive Motor+Driver Motion Control Operating Instructions}},
   year   = {2003}
 }
+
 @article{mills1991internet,
   title     = {Internet time synchronization: the network time protocol},
   author    = {Mills, David L},
@@ -1044,6 +1139,17 @@
   doi      = {10.7717/peerj.453}
 }
 
+@article{shirazi2014stars,
+  title     = {Stars were born in significantly denser regions in the early universe},
+  author    = {Shirazi, Maryam and Brinchmann, Jarle and Rahmati, Alireza},
+  journal   = {The Astrophysical Journal},
+  volume    = {787},
+  number    = {2},
+  pages     = {120},
+  year      = {2014},
+  publisher = {IOP Publishing}
+}
+
 @article{shuping2014overview,
   title   = {Overview of the SOFIA Data Processing System: A generalized system for manual and automatic data processing at the SOFIA Science Center},
   author  = {Shuping, RY and Krzaczek, Robert and Vacca, William D and Charcos-Llorens, Miguel and Reach, William T and Alles, Rosemary and Clarke, Melanie and Melchiorri, Riccardo and Radomski, J and Shenoy, S and others},
@@ -1067,6 +1173,31 @@
   year   = {2021},
   school = {Arizona State University}
 }
+
+
+
+@article{smith2006census,
+  title     = {A census of the Carina Nebula—I. Cumulative energy input from massive stars},
+  author    = {Smith, Nathan},
+  journal   = {Monthly Notices of the Royal Astronomical Society},
+  volume    = {367},
+  number    = {2},
+  pages     = {763--772},
+  year      = {2006},
+  publisher = {Blackwell Science Ltd Oxford, UK}
+}
+
+@article{smith2007census,
+  title     = {A census of the Carina Nebula--II. Energy budget and global properties of the nebulosity},
+  author    = {Smith, Nathan and Brooks, Kate J},
+  journal   = {Monthly Notices of the Royal Astronomical Society},
+  volume    = {379},
+  number    = {4},
+  pages     = {1279--1292},
+  year      = {2007},
+  publisher = {Blackwell Publishing Ltd Oxford, UK}
+}
+
 @misc{spidev,
   author = {Thoms, Volker},
   title  = {spidev},
@@ -1100,8 +1231,6 @@
   url    = {https://github.com/HDFGroup/hdf5},
   year   = {2024}
 }
-
-
 
 @inproceedings{thompson_texturecam,
   title     = {TextureCam: Autonomous image analysis for astrobiology survey},
@@ -1162,6 +1291,15 @@
   year      = {2013}
 }
 
+@inproceedings{wagstaff2018deep,
+  title     = {Deep mars: Cnn classification of mars imagery for the pds imaging atlas},
+  author    = {Wagstaff, Kiri and Lu, You and Stanboli, Alice and Grimes, Kevin and Gowda, Thamme and Padams, Jordan},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume    = {32},
+  number    = {1},
+  year      = {2018}
+}
+
 @inproceedings{wagstaffnovelty,
   title     = {Novelty-driven onboard targeting for Mars rovers},
   author    = {Wagstaff, Kiri L and Francis, Raymond and Kerner, Hannah and Lu, Steven and Nerrise, Favour and III, James F Bell and Doran, Gary and Rebbapragada, Umaa},
@@ -1210,6 +1348,7 @@
   number    = {2017-k-56},
   year      = {2017}
 }
+
 @article{wold1987principal,
   title     = {Principal component analysis},
   author    = {Wold, Svante and Esbensen, Kim and Geladi, Paul},
@@ -1248,57 +1387,4 @@
   volume  = {5},
   number  = {11},
   year    = {2009}
-}
-
-@article{smith2007census,
-  title={A census of the Carina Nebula--II. Energy budget and global properties of the nebulosity},
-  author={Smith, Nathan and Brooks, Kate J},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  volume={379},
-  number={4},
-  pages={1279--1292},
-  year={2007},
-  publisher={Blackwell Publishing Ltd Oxford, UK}
-}
-
-@article{smith2006census,
-  title={A census of the Carina Nebula—I. Cumulative energy input from massive stars},
-  author={Smith, Nathan},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  volume={367},
-  number={2},
-  pages={763--772},
-  year={2006},
-  publisher={Blackwell Science Ltd Oxford, UK}
-}
-
-@article{brooks2005simba,
-  title={SIMBA observations of the Keyhole Nebula},
-  author={Brooks, Kate J and Garay, Guido and Nielbock, Markus and Smith, Nathan and Cox, Pierre},
-  journal={The Astrophysical Journal},
-  volume={634},
-  number={1},
-  pages={436},
-  year={2005},
-  publisher={IOP Publishing}
-}
-
-@article{kaasinen2016cosmos,
-  title={The COSMOS [OII] Survey: Evolution of Electron Density with Star Formation Rate},
-  author={Kaasinen, Melanie and Bian, Fuyan and Groves, Brent and Kewley, Lisa and Gupta, Anshu},
-  journal={Monthly Notices of the Royal Astronomical Society},
-  pages={stw2827},
-  year={2016},
-  publisher={Oxford University Press}
-}
-
-@article{shirazi2014stars,
-  title={Stars were born in significantly denser regions in the early universe},
-  author={Shirazi, Maryam and Brinchmann, Jarle and Rahmati, Alireza},
-  journal={The Astrophysical Journal},
-  volume={787},
-  number={2},
-  pages={120},
-  year={2014},
-  publisher={IOP Publishing}
 }
